--- a/41razmer.csproj
+++ b/41razmer.csproj
@@ -35,8 +35,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -55,6 +64,42 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Order.cs">
+      <DependentUpon>TuhvvatshinModel41.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OrderProduct.cs">
+      <DependentUpon>TuhvvatshinModel41.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PickUpPoint.cs">
+      <DependentUpon>TuhvvatshinModel41.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Product.cs">
+      <DependentUpon>TuhvvatshinModel41.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Role.cs">
+      <DependentUpon>TuhvvatshinModel41.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagrams.cs">
+      <DependentUpon>TuhvvatshinModel41.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TuhvvatshinModel41.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TuhvvatshinModel41.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TuhvvatshinModel41.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TuhvvatshinModel41.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TuhvvatshinModel41.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TuhvvatshinModel41.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="User.cs">
+      <DependentUpon>TuhvvatshinModel41.tt</DependentUpon>
+    </Compile>
     <Page Include="AddEditPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -101,18 +146,49 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="App.Config" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
+    <EntityDeploy Include="TuhvvatshinModel41.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>TuhvvatshinModel41.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="TuhvvatshinModel41.edmx.diagram">
+      <DependentUpon>TuhvvatshinModel41.edmx</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="res\icon.ico" />
     <Resource Include="res\logo.png" />
     <Resource Include="res\picture.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="TuhvvatshinModel41.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>TuhvvatshinModel41.edmx</DependentUpon>
+      <LastGenOutput>TuhvvatshinModel41.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="TuhvvatshinModel41.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>TuhvvatshinModel41.edmx</DependentUpon>
+      <LastGenOutput>TuhvvatshinModel41.cs</LastGenOutput>
+    </Content>
+    <Resource Include="Товар_import\B320R5.jpg" />
+    <Resource Include="Товар_import\D329H3.jpg" />
+    <Resource Include="Товар_import\D572U8.jpg" />
+    <Resource Include="Товар_import\F572H7.jpg" />
+    <Resource Include="Товар_import\F635R4.jpg" />
+    <Resource Include="Товар_import\G432E4.jpg" />
+    <Resource Include="Товар_import\G783F5.jpg" />
+    <Resource Include="Товар_import\H782T5.jpg" />
+    <Resource Include="Товар_import\J384T6.jpg" />
+    <Resource Include="Товар_import\А112Т4.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
