--- a/App.config
+++ b/App.config
@@ -1,6 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
-    </startup>
+  <connectionStrings>
+    <add name="Tuhvatshin41Entities" connectionString="metadata=res://*/TuhvvatshinModel41.csdl|res://*/TuhvvatshinModel41.ssdl|res://*/TuhvvatshinModel41.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=STUD231-7;initial catalog=Tuhvatshin41;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
