--- a/App.config
+++ b/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="Tuhvatshin41Entities" connectionString="metadata=res://*/TuhvatshinModel41.csdl|res://*/TuhvatshinModel41.ssdl|res://*/TuhvatshinModel41.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=STUD231-7;initial catalog=Tuhvatshin41;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Tuhvatshin41Entities" connectionString="metadata=res://*/TuhvatshinModel41.csdl|res://*/TuhvatshinModel41.ssdl|res://*/TuhvatshinModel41.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-E6DNS2P\SQLEXPRESS;initial catalog=Tuhvatshin41;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
